--- a/src/styles/utilities/_position.scss
+++ b/src/styles/utilities/_position.scss
@@ -49,9 +49,9 @@
  */
 
 
-//-----------------------------------------------
+// -----------------------------------------------
 // MIXINS
-//-----------------------------------------------
+// -----------------------------------------------
 
  
 /**
@@ -171,9 +171,9 @@
 
 
 
-//-----------------------------------------------
+// -----------------------------------------------
 // UTILITY CLASSES
-//-----------------------------------------------
+// -----------------------------------------------
 
 // Position Classes
 .static { @include static; }
@@ -190,9 +190,9 @@
   .left-#{$key} { @include left($value); }
 }
 
-//-----------------------------------------------
+// -----------------------------------------------
 // RESPONSIVE CLASSES
-//-----------------------------------------------
+// -----------------------------------------------
 
 // Responsive Position Classes
 @each $breakpoint, $width in $breakpoints {
