--- a/src/styles/utilities/_typography.scss
+++ b/src/styles/utilities/_typography.scss
@@ -160,7 +160,7 @@
 
 }
 
-@include responsive-typography();
+@include responsive-typography;
 .break-normal { @include break-normal; }
 .break-words { @include break-words; }
 .break-all { @include break-all; }
